[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Takuya Koike <takuya.koike@link-u.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
online-judge-tools = "^11.5.1"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
